add css for author works page
reduce max-width for filter selectors

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,9 @@
       "js": [
         "main.js"
       ],
+      "css": [
+        "author-works-page.css"
+      ],
       "matches": [
         "*://ficbook.net/authors/*"
       ],
