--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ficbook-downloader",
-  "version": "1.0.0",
+  "version": "1.1.2",
   "description": "",
   "main": "src/main.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "toastr": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.12",
     "@types/toastr": "^2.1.39",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.2.0",
